k8s/backend-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-svc
  namespace: awaves-dev
  labels:
    app: backend-api
spec:
  type: NodePort
  selector:
    app: backend-api
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
